# BagFromImages

./: CMakeLists.txt  README.md
